@@ -1,3 +1,8 @@
+2011-01-31  Stefan Sprenger  <stefan.sprenger@dkd.de>
+
+	* Removed preset font family
+	* Removed rounded corners from the autocomplete box
+
 2011-01-28  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
 	* Updated jQuery UI to 1.8.9
